--- a/kimbara/angular.json
+++ b/kimbara/angular.json
@@ -130,6 +130,10 @@
               "devServerTarget": "kimbara:serve:production"
             }
           }
+        },
+        "deploy": {
+          "builder": "@angular/fire:deploy",
+          "options": {}
         }
       }
     }
